# makeroot

./: Config.in  Makefile  README.md
applications/: Makefile
audio/: Config.in  Makefile
bootloader/: Config.in  Makefile
bootloader/config/: u-boot.mk
config/: snowball.config
configs/: linaro.config  marzen.config  snowball-net-eglibc.config  snowball-server.config  snowball-wayland.config
custom/: Makefile
env/: Config.in  Makefile
env/config/: busybox_defconfig
graphics/: Config.in  Makefile
graphics/egl/: Config.in  Makefile
graphics/system/: Config.in  Makefile
graphics/wayland/: Makefile
image/: Config.in  Makefile
image/mmc/: Config.in  Makefile
init/: Config.in  Makefile
init/config/: rcS.default
kernel/: Config.in  Makefile  bad.config
kernel/config/: hw20com_defconfig  igloo-kernel_defconfig  pnx5220_defconfig  snowball_defconfig  snowball_defconfig-3.8  (+5 more)
libc/: Config.in  Makefile
scripts/: Makefile  android.mk  builtin.mk  download.mk  host.mk  image.mk  include.mk  install.mk  library-dynamic.mk  library-static.mk  library.mk  mode.mk  project.mk  subdir.mk  tool.mk  toolchain.mk  ubifs.mk
system/: Config.in  Makefile
test/: Makefile
tools/: Config.in  Makefile
tools/sunrpc-4.0/: Makefile  Makefile.am  Makefile.in  avg.x  avg_xdr.c  config.h.in  configure  configure.ac  configure.scan  rpc_clntout.c  rpc_main.c  rpc_parse.c  rpc_sample.c  rpc_scan.c  rpc_svcout.c  rpc_util.c  rpc_util.h  rpcgen  types.h
tools/sunrpc-4.0/doc/: Makefile.am  Makefile.in
tree/: Config.in  Makefile
versioning/: default.config
(+173 files in other folders)
